Add favicon and update links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     />
     <title>Amity Bead Shop | Handcrafted Jewelry</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
