--- a/checkout.html
+++ b/checkout.html
@@ -27,7 +27,9 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo"><a href="index.html">AMITY.</a></div>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo.jpg" alt="Amity Bead Shop" style="height: 60px;"></a>
+                </div>
                 <ul class="nav-links">
                     <li><a href="index.html">Back to Shop</a></li>
                 </ul>
