--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <header>
       <div class="container">
         <nav>
-          <div class="logo">AMITY.</div>
+          <div class="logo">
+            <a href="index.html"><img src="assets/images/logo.jpg" alt="Amity Bead Shop" style="height: 60px;"></a>
+          </div>
           <ul class="nav-links">
             <li><a href="#shop">Shop</a></li>
             <li><a href="about.html">About</a></li>
