--- a/about.html
+++ b/about.html
@@ -19,8 +19,10 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo"><a href="index.html">AMITY.</a></div>
-                <ul class="nav-links">
+            <div class="logo">
+                <a href="index.html"><img src="assets/images/logo.jpg" alt="Amity Bead Shop" style="height: 60px;"></a>
+            </div>
+            <ul class="nav-links">
                     <li><a href="index.html#shop">Shop</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
