--- a/checkout.html
+++ b/checkout.html
@@ -15,24 +15,19 @@
     
     <link rel="stylesheet" href="style.css">
     
-    <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-       (function(){
-          emailjs.init("HkMBsCI95U0p-L_Po"); // User needs to replace this
-       })();
-    </script>
+    <!-- PayPal SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script> <!-- 'sb' for sandbox testing -->
 </head>
 <body>
     <header>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <a href="index.html"><img src="assets/images/logo.jpg" alt="Amity Bead Shop" style="height: 80px;"></a>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="index.html">Back to Shop</a></li>
-                </ul>
+              <div class="logo">
+                <a href="index.html"><img src="assets/images/logo.jpg" alt="Amity Bead Shop" style="height: 80px;"></a>
+              </div>
+              <ul class="nav-links">
+                <li><a href="index.html">Back to Shop</a></li>
+              </ul>
             </nav>
         </div>
     </header>
@@ -69,7 +64,6 @@
                                 <label for="city">City</label>
                                 <input type="text" id="city" required>
                             </div>
-                        <div class="form-row">
                             <div class="form-group">
                                 <label for="zip">Zip Code</label>
                                 <input type="text" id="zip" required>
@@ -77,7 +71,13 @@
                         </div>
                     </section>
 
-                    <button type="submit" class="btn btn-block">Complete Order via Email</button>
+                    <section class="form-section">
+                        <h2>Payment Method</h2>
+                        <div id="paypal-button-container" style="margin-top: 20px;"></div>
+                        <p class="small-text" style="text-align: center; margin-top: 15px;">
+                            <i class="fas fa-lock"></i> All transactions are secure and encrypted.
+                        </p>
+                    </section>
                 </form>
             </div>
 
@@ -104,6 +104,40 @@
             </div>
         </div>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="footer-grid">
+          <div class="footer-section">
+            <h3>AMITY.</h3>
+            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewelry designed to bring a little bit of joy to your everyday life.</p>
+          </div>
+          <div class="footer-section">
+            <h4>Support</h4>
+            <ul>
+              <li><a href="about.html">Our Story</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#">Shipping & Returns</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h4>Secure Payment</h4>
+            <div class="trust-badges" style="flex-direction: column;">
+              <div class="trust-badge"><i class="fas fa-lock"></i> SSL Encrypted Checkout</div>
+              <div class="trust-badge"><i class="fab fa-paypal"></i> PayPal Verified Merchant</div>
+            </div>
+          </div>
+        </div>
+        <div style="border-top: 1px solid rgba(255,255,255,0.1); padding-top: 30px; display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
+          <p class="small-text">&copy; 2026 Amity Bead Shop. Handcrafted with love.</p>
+          <div style="display: flex; gap: 20px;">
+            <a href="#" class="small-text">Privacy Policy</a>
+            <a href="#" class="small-text">Terms of Service</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
