Enhance color contrast sitewide and fix checkout links, update paypal client ID

--- a/checkout.html
+++ b/checkout.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- PayPal SDK: Explicitly disabling credit/debit card funding -->
-    <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD&disable-funding=credit,card"></script> 
+    <script src="https://www.paypal.com/sdk/js?client-id=Ad-tSKHFfT8QmvP0bVDV40082VrZkt9dFzTPk9auGpfkKzNlFvQOb7HLhEOEG4pEs0GR8qfqr7MtnJNK&currency=USD&disable-funding=credit,card"></script> 
 </head>
 <body>
     <header>
@@ -118,8 +118,7 @@
             <ul>
               <li><a href="about.html">Our Story</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#">Shipping & Returns</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a href="faq.html">FAQ</a></li>
             </ul>
           </div>
           <div class="footer-section">
@@ -133,8 +132,8 @@
         <div style="border-top: 1px solid rgba(255,255,255,0.1); padding-top: 30px; display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
           <p class="small-text">&copy; 2026 Amity Bead Shop. Handcrafted with love.</p>
           <div style="display: flex; gap: 20px;">
-            <a href="#" class="small-text">Privacy Policy</a>
-            <a href="#" class="small-text">Terms of Service</a>
+            <a href="privacy.html" class="small-text">Privacy Policy</a>
+            <a href="terms.html" class="small-text">Terms of Service</a>
           </div>
         </div>
       </div>
