Apply Australian spelling and remove 8 unwanted bracelets

--- a/about.html
+++ b/about.html
@@ -72,10 +72,10 @@
         <section style="max-width: 800px; margin: 0 auto; margin-bottom: var(--spacing-xl);">
             <h2 class="section-title" style="text-align: left; font-size: 2rem;">The Amity Philosophy</h2>
             <p style="margin-bottom: var(--spacing-md);">
-                Welcome to Amity Bead Shop. What started as a small passion project on a rainy Sunday afternoon has blossomed into a colorful celebration of creativity and connection.
+                Welcome to Amity Bead Shop. What started as a small passion project on a rainy Sunday afternoon has blossomed into a colourful celebration of creativity and connection.
             </p>
             <p style="margin-bottom: var(--spacing-md);">
-                We believe that jewelry shouldn't just be an accessory—it should be a mood lifter, a memory keeper, and a small spark of joy in your daily routine. Each of our bracelets is handcrafted with intention, using carefully selected gemstones and beads that speak to the soul.
+                We believe that jewellery shouldn't just be an accessory—it should be a mood lifter, a memory keeper, and a small spark of joy in your daily routine. Each of our bracelets is handcrafted with intention, using carefully selected gemstones and beads that speak to the soul.
             </p>
             <p>
                 From our "Grape Green" summer vibes to the calming "Pearl" collection, every piece basically has a little bit of our heart woven into it. We hope you find something here that makes you smile.
@@ -87,7 +87,7 @@
                 <div>
                     <h2 class="section-title" style="text-align: left; font-size: 2rem; transform: none; left: 0;">Our Process</h2>
                     <p style="margin-bottom: var(--spacing-md);">Every Amity bracelet begins with a sketch and a curated selection of beads. We source our materials from ethical suppliers, focusing on glass, natural stone, and durable elastic.</p>
-                    <p>Our process is slow and intentional. Each bead is hand-threaded, and every knot is double-secured to ensure your jewelry lasts through all of life's adventures. We test every design for comfort and durability before it ever reaches the shop.</p>
+                    <p>Our process is slow and intentional. Each bead is hand-threaded, and every knot is double-secured to ensure your jewellery lasts through all of life's adventures. We test every design for comfort and durability before it ever reaches the shop.</p>
                 </div>
                 <div class="process-image-container">
                     <img src="assets/images/process.png" alt="Handcrafting an Amity bead bracelet" style="width: 100%; height: 350px; object-fit: cover; border-radius: 15px; box-shadow: var(--shadow-soft);">
@@ -116,7 +116,7 @@
         <div class="footer-grid">
           <div class="footer-section">
             <h3>AMITY.</h3>
-            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewelry designed to bring a little bit of joy to your everyday life.</p>
+            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewellery designed to bring a little bit of joy to your everyday life.</p>
             <div class="trust-badges">
               <div class="trust-badge"><i class="fas fa-lock"></i> Secure SSL</div>
               <div class="trust-badge"><i class="fab fa-paypal"></i> PayPal Verified</div>
