--- a/checkout.html
+++ b/checkout.html
@@ -111,7 +111,7 @@
         <div class="footer-grid">
           <div class="footer-section">
             <h3>AMITY.</h3>
-            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewelry designed to bring a little bit of joy to your everyday life.</p>
+            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewellery designed to bring a little bit of joy to your everyday life.</p>
           </div>
           <div class="footer-section">
             <h4>Support</h4>
