--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="faq-item" style="margin-bottom: 30px; border-bottom: 1px solid var(--border-light); padding-bottom: 20px;">
-                <h3 style="margin-bottom: 15px;">How do I care for my jewelry?</h3>
+                <h3 style="margin-bottom: 15px;">How do I care for my jewellery?</h3>
                 <p style="color: var(--text-muted);">To keep your bracelets looking their best, we recommend rolling them onto your wrist rather than stretching. Avoid contact with water, perfumes, and lotions. Store in a cool, dry place when not in use.</p>
             </div>
 
@@ -74,7 +74,7 @@
         <div class="footer-grid">
           <div class="footer-section">
             <h3>AMITY.</h3>
-            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewelry designed to bring a little bit of joy to your everyday life.</p>
+            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewellery designed to bring a little bit of joy to your everyday life.</p>
             <div class="trust-badges">
               <div class="trust-badge"><i class="fas fa-lock"></i> Secure SSL</div>
               <div class="trust-badge"><i class="fab fa-paypal"></i> PayPal Verified</div>
