--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Amity Bead Shop - Handcrafted beaded jewelry and accessories."
+      content="Amity Bead Shop - Handcrafted beaded jewellery and accessories."
     />
-    <title>Amity Bead Shop | Handcrafted Jewelry</title>
+    <title>Amity Bead Shop | Handcrafted Jewellery</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -90,7 +90,7 @@
         <div class="testimonial-grid">
           <div class="testimonial-card">
             <div class="testimonial-stars">★★★★★</div>
-            <p>"The most beautiful bracelets I've ever owned! The quality of the glass beads is stunning, and I love the 'Avo' colors."</p>
+            <p>"The most beautiful bracelets I've ever owned! The quality of the glass beads is stunning, and I love the 'Avo' colours."</p>
             <div class="testimonial-author">- Sarah M. <span class="badge-verified">Verified Purchase</span></div>
           </div>
           <div class="testimonial-card">
@@ -144,7 +144,7 @@
         <div class="footer-grid">
           <div class="footer-section">
             <h3>AMITY.</h3>
-            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewelry designed to bring a little bit of joy to your everyday life.</p>
+            <p style="opacity: 0.7; margin-top: 15px;">Handcrafted beaded jewellery designed to bring a little bit of joy to your everyday life.</p>
             <div class="trust-badges">
               <div class="trust-badge"><i class="fas fa-lock"></i> Secure SSL</div>
               <div class="trust-badge"><i class="fab fa-paypal"></i> PayPal Verified</div>
