--- a/contact.html
+++ b/contact.html
@@ -70,20 +70,22 @@
                     Have a question about a custom order or just want to say hi? We'd love to hear from you. Fill out the form below and we'll get back to you within 24 hours.
                 </p>
 
-                <form id="contact-form">
+                <form id="contact-form" name="contact" method="POST" data-netlify="true" action="/contact.html">
+                    <input type="hidden" name="form-name" value="contact">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" required>
+                        <input type="text" id="name" name="name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" required>
+                        <input type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" rows="5" required style="width: 100%; padding: 12px; border: 1px solid var(--border-light); border-radius: 4px; font-family: var(--font-body); font-size: 1rem; border-color: var(--border-light);"></textarea>
+                        <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 12px; border: 1px solid var(--border-light); border-radius: 4px; font-family: var(--font-body); font-size: 1rem; border-color: var(--border-light);"></textarea>
                     </div>
                     <button type="submit" class="btn">Send Message</button>
+                    <p id="form-success" style="display:none; margin-top: 15px; color: #10B981; font-weight: 600;">✓ Message sent! We'll get back to you soon.</p>
                 </form>
             </div>
 
@@ -146,19 +148,37 @@
 
     <script src="script.js"></script>
     <script>
-        // Simple mock submit for contact form
-        document.getElementById('contact-form').addEventListener('submit', (e) => {
+        document.getElementById('contact-form').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const btn = e.target.querySelector('button');
+            const form = e.target;
+            const btn = form.querySelector('button[type="submit"]');
+            const successMsg = document.getElementById('form-success');
             const originalText = btn.textContent;
+
             btn.textContent = 'Sending...';
             btn.disabled = true;
-            setTimeout(() => {
-                alert('Message sent! We will get back to you soon.');
-                e.target.reset();
-                btn.textContent = originalText;
-                btn.disabled = false;
-            }, 1000);
+
+            const formData = new FormData(form);
+
+            try {
+                const response = await fetch('/', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                    body: new URLSearchParams(formData).toString()
+                });
+
+                if (response.ok) {
+                    successMsg.style.display = 'block';
+                    form.reset();
+                } else {
+                    alert('Something went wrong. Please try again or email us directly.');
+                }
+            } catch (err) {
+                alert('Something went wrong. Please try again or email us directly.');
+            }
+
+            btn.textContent = originalText;
+            btn.disabled = false;
         });
     </script>
 </body>
